<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="loginText">login</string>
    <string name="passwordText">password</string>
    <string name="loginHint">login name</string>
    <string name="dialog_message">Finish Activity</string>
    <string name="dialog_title">Finish ListItemActivity</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="send">Send</string>
    <string name="start_chat">Start Chat</string>
    <string name="btn_start_activity">StartActivity</string>
    <string name="btn_delete_message">Delete this Message</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="btn_start_toolbar">Test Toolbar</string>
    <string name="snack_msg">This is snackbar message</string>
</resources>
